# dsa_internal

./: README.md  fastapi_app.py  pyproject.toml
backend/: LICENSE  Makefile  embeddings_hf.py  fastapi2.py  requirements.txt
backend/memory_trials/: imports.py  main.py
backend/previous_versions/: fastapi_app.py
backend/research/: policy_inclusion.py  text_only.py
front_end/chatbot-ui/: README_chatbot_ui.md  package-lock.json  package.json
front_end/chatbot-ui/src/: app.jsx
front_end/chatbot-ui/src/components/: ChatbotUI.jsx  PolicyTabs.jsx  ui.jsx
front_end/chatbot-ui/src/styles/: chatbot.css
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  ChatbotUI.tsx  styles.css
