[project]
name = "test1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-core>=1.36.0",
    "azure-identity>=1.25.1",
    "azure-storage-blob>=12.27.1",
    "certifi>=2025.11.12",
    "ddgs>=9.9.2",
    "faiss-cpu>=1.13.0",
    "langchain-openai>=1.1.0",
    "langchain>=1.0",
    "langchain-community==0.4.1",
    "langchain-text-splitters==1.0.0",
    "openai>=2.8.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "tiktoken>=0.12.0",
    "xlrd>=2.0.2",
    "black>=25.11.0",
    "python-dotenv>=1.2.1",
    "fastapi>=0.123.7",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.2",
]
